// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`separator > renders with as correctly 1`] = `"<span data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row"><!--v-if--><div data-slot="border" class="border-default w-full border-solid border-t"></div><!--v-if--><!--v-if--></span>"`;

exports[`separator > renders with avatar correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row">
  <!--v-if-->
  <div data-slot="border" class="border-default w-full border-solid border-t"></div>
  <div data-slot="container" class="font-medium color-text flex whitespace-nowrap mx-3"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/praburangki.png" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span></div>
  <div data-slot="border" class="border-default w-full border-solid border-t"></div>
  <!--v-if-->
</div>"
`;

exports[`separator > renders with class correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row flex-row-reverse">
  <!--v-if-->
  <div data-slot="border" class="border-default w-full border-solid border-t"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with color primary correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row">
  <!--v-if-->
  <div data-slot="border" class="border-primary w-full border-solid border-t"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with decorative correctly 1`] = `
"<div data-orientation="horizontal" role="none" data-slot="root" class="flex items-center align-center text-center w-full flex-row">
  <!--v-if-->
  <div data-slot="border" class="border-default w-full border-solid border-t"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with icon correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row">
  <!--v-if-->
  <div data-slot="border" class="border-default w-full border-solid border-t"></div>
  <div data-slot="container" class="font-medium color-text flex whitespace-nowrap mx-3"><span class="iconify i-lucide:image shrink-0 size-5" aria-hidden="true" data-slot="icon"></span></div>
  <div data-slot="border" class="border-default w-full border-solid border-t"></div>
  <!--v-if-->
</div>"
`;

exports[`separator > renders with label correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row">
  <!--v-if-->
  <div data-slot="border" class="border-default w-full border-solid border-t"></div>
  <div data-slot="container" class="font-medium color-text flex whitespace-nowrap mx-3"><span data-slot="label" class="text-sm">+1</span></div>
  <div data-slot="border" class="border-default w-full border-solid border-t"></div>
  <!--v-if-->
</div>"
`;

exports[`separator > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" aria-orientation="vertical" role="separator" data-slot="root" class="flex items-center align-center text-center h-full flex-col">
  <!--v-if-->
  <div data-slot="border" class="border-default h-full border-solid border-s"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with position end correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row">
  <!--v-if-->
  <div data-slot="border" class="border-default w-full border-solid border-t"></div>
  <!--v-if-->
  <div data-slot="container" class="font-medium color-text flex whitespace-nowrap ms-3"><span class="iconify i-lucide:image shrink-0 size-5" aria-hidden="true" data-slot="icon"></span></div>
</div>"
`;

exports[`separator > renders with position start correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row">
  <div data-slot="container" class="font-medium color-text flex whitespace-nowrap me-3"><span class="iconify i-lucide:image shrink-0 size-5" aria-hidden="true" data-slot="icon"></span></div>
  <div data-slot="border" class="border-default w-full border-solid border-t"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with size lg correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row">
  <!--v-if-->
  <div data-slot="border" class="border-default w-full border-solid border-t-[4px]"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with size md correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row">
  <!--v-if-->
  <div data-slot="border" class="border-default w-full border-solid border-t-[3px]"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with size sm correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row">
  <!--v-if-->
  <div data-slot="border" class="border-default w-full border-solid border-t-[2px]"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with size xl correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row">
  <!--v-if-->
  <div data-slot="border" class="border-default w-full border-solid border-t-[5px]"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with size xs correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row">
  <!--v-if-->
  <div data-slot="border" class="border-default w-full border-solid border-t"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with type dashed correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row">
  <!--v-if-->
  <div data-slot="border" class="border-default w-full border-dashed border-t"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with type dotted correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row">
  <!--v-if-->
  <div data-slot="border" class="border-default w-full border-dotted border-t"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with type solid correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row">
  <!--v-if-->
  <div data-slot="border" class="border-default w-full border-solid border-t"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with ui correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex items-center align-center text-center w-full flex-row">
  <!--v-if-->
  <div data-slot="border" class="border-default w-full border-solid border-t"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;
